kubernetes/generated/manifests/dev/cilium/Ingress-hubble-ui.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: hubble-ui
    app.kubernetes.io/part-of: cilium
    k8s-app: hubble-ui
  name: hubble-ui
  namespace: kube-system
spec:
  ingressClassName: cilium
  rules:
    - host: hubble.json64.dev
      http:
        paths:
          - backend:
              service:
                name: hubble-ui
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hubble.json64.dev
